# ROCm_Documentation

./: .gitmodules  .readthedocs.yaml  .rst  404.rst  Doxyfile  HIP-Installation.rst  InstallGuide.rst  LICENSE  Makefile  README.md  ROCm.rst  ROCm.rst~  cleanup_text.sh  conf.py  index.rst  index.rst~  installguide.rst  outline.rst  prepend.sh  prepend.sh:PG$Secure  prepend.sh:Zone.Identifier  prepend.sh~  readthedocs.yml  requirements.txt  run_doxygen.sh
Archived_Documentation/: 4.2_Installation_Guide.rst  4_1_Installation_Guide.rst  HIP-GUIDE.rst  HIP-Installation.rst  Installation.rst  README431.rst
CMake/: UsingCMakewithAMDROCm.rst
Current_Release_Notes/: Current-Release-Notes.rst  Current-Release-Notes.rst~  DISCLAIMER.rst  Deprecation.rst  ROCm-Learning-Center.rst  ROCm-Version-History.rst
Deep_learning/: Deep-learning.rst  Deep-learning.rst~  GCN-asm-tutorial.rst  MXNet.rst  MXNet_readme.rst  Thrust_readme.rst  caffe.rst  hipCaffe .rst  mininbody.rst
FAQ/: FAQ_HIP.rst
Feedback/: Readme.rst
GCN_ISA_Manuals/: GCN-ISA-Manuals.rst  PCIe-features.rst  PCLe-Features.rst  caffe.rst  testdocbook.rst
HIP Documentation/: HIP Programming Guide.rst
HIP_API-xml/: AMDGPUPTNote_8h.xml  AMDGPURuntimeMetadata_8h.xml  Synchonization.xml  bug.xml  channel__descriptor_8h.xml  classFakeMutex.xml  classLockedAccessor.xml  classTidInfo.xml  classihipCtxCriticalBase__t.xml  classihipCtx__t.xml  classihipDeviceCriticalBase__t.xml  classihipDevice__t.xml  classihipEvent__t.xml  classihipException.xml  classihipIpcMemHandle__t.xml  classihipModule__t.xml  classihipStreamCriticalBase__t.xml  classihipStream__t.xml  deprecated.xml  device__functions_8cpp.xml  device__functions_8h.xml  device__util_8cpp.xml  device__util_8h.xml  dir_3090fad7c0e29e059000ad90aa70b5db.xml  dir_b2c0e07d6739a282712773a7ad2e40d4.xml  dir_db2c47f6438bee2d6c6d8bfa7bc75a3c.xml  dir_e5535fa9b1dea92de0c599e66aa58662.xml  dir_fb535b8f63f4d4b84d3985ea2e208b59.xml  driver__types_8h.xml  env_8cpp.xml  env_8h.xml  grid__launch_8cpp.xml  group__API.xml  group__Context.xml  group__Device.xml  group__Driver.xml  group__Error.xml  group__Event.xml  group__Fence.xml  group__GlobalDefs.xml  (+154 more)
Inputs/: hip_runtime_api.h
Installation_Guide/: FAQ-on-Installation.rst  FAQ-on-Installation.rst~  HCC-Compiler.rst  HIP-Installation.rst  HIP.rst  Installation v4.5.rst  Installation-Guide.rst  Installation-Guide.rst~  Installation_new.rst  Installation_v4.5.rst  List-of-ROCm-Packages-for-Ubuntu-Fedora.rst  List-of-ROCm-Packages-for-Ubuntu-Fedora.rst~  MESA-Multimedia_Installation.rst  Mesa-Multimedia-Installation.rst  More-about-how-ROCm-uses-PCIe-Atomics.rst  More-about-how-ROCm-uses-PCIe-Atomics.rst~  Multiversion-Installation.rst  Quick  Quick Start Installation Guide.rst  QuickStartGuideOpenCL.rst  ROC-smi.rst  ROCK-Kernel-Driver_readme.rst  ROCR-Runtime.rst  ROCk-kernel.rst  ROCm Installation v4.5.rst  ROCt.rst  Software-Stack-for-AMD-GPU.rst  Tools-Installation.rst  Using-CMake-with-AMD-ROCm.rst  atmi.rst  v4.1-Installation-Guide
Other_Solutions/: Other-Solutions.rst  PCIe-Debug.rst  ROCm_PCIe_Debug.md  rocm-validation-suite.rst
Programming_Guides/: AMD_OpenCL_Programming_Optimization_Guide.docx  CUDAAPIHIP.rst  CUDAAPIHIPTEXTURE.rst  HIP-FAQ.rst  HIP-FAQ.rst~  HIP-GUIDE.rst  HIP-GUIDE.rst~  HIP-Terms.rst  HIP-Terms2.rst  HIP-bug.rst  HIP-porting-guide.rst  HIP-porting-guide.rst~  HIP-run-time-API.rst  HIP-terminology.rst  HIP-terminology.rst~  HIP-terminologybackup.rst  HIPTerms.rst  HIPTerms2.rst  HIP_API_Guide.rst  HIP_Debugging.rst  Kernel_language.rst  LanguageInto.rst  OpenCL-Architecture.rst  Opencl-optimization.rst  Opencl-programming-guide.rst  Programming-Guides.rst  Programming-Guides.rst~  aomp.rst  gcn-assembler.rst  hcc-guide.rst  hcc-profile.rst  hip-programming-guide.rst  hip-programming.rst  hip_install.rst  hip_port.rst  hip_profiling.rst  hipporting-driver-api.rst  openmp_support.rst
ROCm_API_References/: BLAS1.rst  BLAS2.rst  BLAS3.rst  HCC-API.rst  HIP-API.rst  HIP-MATH-API.rst  HIP-MATH.rst  HIP_MATH_API.rst  ROCm-API-References.rst  ROCm-API-References.rst~  ROCr-API.rst  ROCr-Runtime.rst  Thrust.rst  api.rst  clBLAS.rst  clSPARSE_API.rst  clSPARSE_api.rst  rocBLAS.rst
ROCm_Audio_Video_Tutorials/: ROCm_videos.rst
ROCm_Beginners_Guide/: HCC_Getting_Started.rst
ROCm_Compiler_SDK/: ROCm-Codeobj-format.rst  ROCm-Compiler-SDK.rst  ROCm-Native-ISA.rst  ocml.rst
ROCm_Libraries/rocALUTION/src/clients/: CMakeLists.txt
ROCm_Libraries/rocALUTION/src/clients/benchmarks/: CMakeLists.txt
ROCm_Libraries/rocALUTION/src/clients/include/: common.hpp  testing_backend.hpp  testing_bicgstab.hpp  testing_bicgstabl.hpp  testing_cg.hpp  testing_cr.hpp  testing_fcg.hpp  testing_fgmres.hpp  testing_global_matrix.hpp  testing_global_vector.hpp  testing_gmres.hpp  testing_idr.hpp  testing_local_matrix.hpp  testing_local_stencil.hpp  testing_local_vector.hpp  testing_pairwise_amg.hpp  testing_parallel_manager.hpp  testing_qmrcgstab.hpp  testing_ruge_stueben_amg.hpp  testing_saamg.hpp  testing_uaamg.hpp  utility.hpp
ROCm_Libraries/rocALUTION/src/clients/samples/: CMakeLists.txt  amg.cpp  as-precond.cpp  async.cpp  benchmark.cpp  benchmark_mpi.cpp  bicgstab.cpp  bicgstab_mpi.cpp  block-precond.cpp  cg-amg.cpp  cg-amg_mpi.cpp  cg.cpp  cg_mpi.cpp  cmk.cpp  direct.cpp  fcg_mpi.cpp  fgmres.cpp  fgmres_mpi.cpp  fixed-point.cpp  global-io_mpi.cpp  gmres.cpp  idr.cpp  idr_mpi.cpp  key.cpp  me-preconditioner.cpp  mixed-precision.cpp  power-method.cpp  qmrcgstab_mpi.cpp  simple-spmv.cpp  sp-precond.cpp  stencil.cpp  tns.cpp  var-precond.cpp
ROCm_Libraries/rocALUTION/src/clients/tests/: CMakeLists.txt  rocalution_host_gtest_main.cpp  test_backend.cpp  test_bicgstab.cpp  test_bicgstabl.cpp  test_cg.cpp  test_cr.cpp  test_fcg.cpp  test_fgmres.cpp  test_global_matrix.cpp  test_global_vector.cpp  test_gmres.cpp  test_idr.cpp  test_local_matrix.cpp  test_local_stencil.cpp  test_local_vector.cpp  test_pairwise_amg.cpp  test_parallel_manager.cpp  test_qmrcgstab.cpp  test_ruge_stueben_amg.cpp  test_saamg.cpp  test_uaamg.cpp
(+640 files in other folders)
